--- a/style.css
+++ b/style.css
@@ -13,24 +13,49 @@ li {
   list-style: none;
 }
 
-.btn-outline-success {
-  color: black;
-  background-color: white;
-  border-color: black;
+img {
+  max-width: 100%;
 }
 
-.btn-outline-success:hover {
-  background-color: black;
-  color: white;
-  border-color: black;
+body {
+  min-width: 265px
+}
+
+/* 헤더 배너 */
+header {
+  transition: 0.5s;
 }
 
 
-.form-control:focus {
-  border-color: black;
-  box-shadow: none;
+header>.banner {
+  display: block;
+  text-align: center;
+  background-color: #000;
+  max-height: 40px;
+  overflow: hidden;
 }
 
+a.banner {
+  line-height: 0;
+}
+
+header>.banner>div {
+  max-height: 40px;
+  overflow: hidden;
+}
+
+.layout_header>.banner img {
+  display: inline-block;
+  max-height: 40px;
+}
+
+@media screen and (max-width: 992px) {
+  header>.banner {
+    display: none;
+  }
+}
+
+/* 헤더의 메뉴 */
 .nav_var {
   padding: 0;
 }
@@ -50,17 +75,32 @@ li {
   margin-left: 20px;
 }
 
-.nav-login {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 24px;
-}
-
 .navbar-toggler:focus {
   box-shadow: none;
 }
 
-.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+.btn-outline-success {
+  color: black;
+  background-color: white;
+  border-color: black;
+}
+
+.btn-outline-success:hover {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+
+.form-control:focus {
+  border-color: black;
+  box-shadow: none;
+}
+
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check)+.btn:active {
   background-color: black;
 }
 
@@ -70,6 +110,36 @@ li {
   --bs-btn-border-radius: none;
   padding: 7px 30px;
 }
+
+@media screen and (max-width: 991px) {
+  .navbar-collapse form {
+    margin-bottom: 24px;
+  }
+}
+
+/* 헤더의 메뉴가 스크롤을 내렸을 때 상단 고정 */
+header.slider nav {
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  right: 0;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  top: 0;
+}
+
+@media screen and (min-width: 992px) {
+  header.slider nav {
+    height: 50px;
+    overflow: hidden;
+  }
+
+  header.slider nav div.nav_logo a.nav_logo img {
+    height: 38px;
+  }
+}
+
+/* 메인 */
 
 .text01 {
   font-size: calc(1.325rem + .9vw);
@@ -82,7 +152,6 @@ li {
   font-weight: 380;
   letter-spacing: -1px;
 }
-
 
 .img_main {
   width: 100%;
@@ -233,11 +302,5 @@ footer {
 
   .third-line {
     display: block;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .navbar-collapse form {
-    margin-bottom: 24px;
   }
 }
